Fix Copyable and ComplexACL coverage tests